Revision history for Perl module Mojolicious::Plugin::RevealJS

0.19 2020-6-20
  - Update reveal-sampler to cd4a07d

0.18 2018-09-07
  - Add hljs_theme_url stash value

0.17 2018-08-31
  - Fix bug with mark in reveal-sampler

0.16 2018-08-31
  - Fix some broken pod, manwar++

0.15 2018-08-31
  - Fix a bug with specifying language in reveal-sampler

0.14 2018-08-31
  - Bundle reveal-sampler
  - Add include_sample helper
  - Soft-deprecate include_code

0.13 2018-08-27
  - Add include_filename directive to include_code
  - Add section helper
  - Add markdown_section helper
  - Bump bundled reveal.js to 3.7.0

0.12 2017-06-17
  - Bump bundled reveal.js to 3.5.0
  - Add a configurable base tag
  - Allow export to override the base tag (Experimental)

0.11 2017-05-16
  - Bump dependency of Perl to 5.12 for regexp \N

0.10 2017-04-12
  - Add HTML comment to section handling

0.09 2017-04-12
  - Add section handling (experimental)

0.08 2017-03-25
  - Fix the previously broken release

0.07 2017-03-13
  - Convert to Module::Built::Tiny via App::ModuleBuildTiny

0.06 2017-03-13
  - Use absolute paths for bundled files (mimosinnet)
  - Fix deprecated use of Mojo::Util functions
    - Bump dependency of Mojolicious to 7.15

0.05 2015-06-11
  - Added missing prereq on File::ShareDir

0.04 2015-06-07
  - Corrected utf8 abstract

0.03 2015-06-07
  - Added language handling to include_code

0.02 2015-05-10
  - Significantly improve customization possibilities
  - Added an example of takahashi style presentations

0.01 2015-05-06
  - Initial release
