@@ -2,6 +2,7 @@ Revision history for Perl module Mojolicious::Plugin::RevealJS
 
 0.19 2020-6-20
   - Update reveal-sampler to cd4a07d
+  - Add sampler's indentation handling to include_sample
 
 0.18 2018-09-07
   - Add hljs_theme_url stash value
